<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center|top"
	android:orientation="vertical">


	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/modules_backup"
		android:contentDescription="@string/todo"
		tools:ignore="ContentDescription" />


	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:text="@string/modules_backup_tips"
		android:gravity="center|top"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="#656565" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/backup_modules"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_weight="1.0"
			android:text="@string/backup_modules"
			style="?android:attr/buttonBarButtonStyle" />

		<Button
			android:id="@+id/restore_modules"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_weight="1.0"
			android:text="@string/restore_modules"
			style="?android:attr/buttonBarButtonStyle" />
	</LinearLayout>

	<Button
		android:id="@+id/delete_backup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/delete_backup"
		style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>

