<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center|top"
	android:orientation="vertical">


	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_glove_header"
		android:contentDescription="@string/todo" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/glove_mode_tips"
		android:textColor="#616161" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/glove_on"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="5dp"
			android:layout_weight="1.0"
			android:text="@string/switch_on"
			style="?android:attr/buttonBarButtonStyle" />

		<Button
			android:id="@+id/glove_off"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="5dp"
			android:layout_weight="1.0"
			android:text="@string/switch_off"
			style="?android:attr/buttonBarButtonStyle" />

	</LinearLayout>

</LinearLayout>

