<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center|top"
	android:orientation="vertical">

<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/round_square"
	android:contentDescription="@string/todo"
	tools:ignore="ContentDescription" />
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:text="@string/uisquare_tips"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="#656565" />


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/square"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="5dp"

				android:layout_weight="1.0"

				android:text="@string/ui_square_bt"
				style="?android:attr/buttonBarButtonStyle" />

			<Button
				android:id="@+id/round"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:layout_weight="1.0"

				android:text="@string/ui_rounded_bt"
				style="?android:attr/buttonBarButtonStyle" />

		</LinearLayout>
	</LinearLayout>



