<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/sample_image_1080x608"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/color_adjust_summary" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/_1_028"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/apply"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/restore"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

</LinearLayout>
